# API

./: Dockerfile  README.md  globantapi.drawio  main.py  pyproject.toml
app/: __init__.py  config.py  models.py  routes.py  views.py
data/backup/: departments.avro  hired_employed.avro  jobs.avro
